[project]
name = "mng-opencode"
version = "0.1.2"
description = "OpenCode agent type plugin for mng"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.6",
]

[project.entry-points.mng]
opencode = "imbue.mng_opencode.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
