[project]
name = "mng-pair"
version = "0.1.2"
description = "Pair command plugin for mng - continuous file sync between agent and local directory"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.6",
    "click-option-group>=0.5.6",
]

[project.entry-points.mng]
pair = "imbue.mng_pair.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
