[project]
name = "mng-recursive"
version = "0.1.0"
description = "Recursive mng plugin: injects mng config and dependencies into remote hosts during provisioning"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.4",
]

[project.entry-points.mng]
recursive = "imbue.mng_recursive.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
