[project]
name = "mng-schedule"
version = "0.1.0"
description = "Schedule command plugin for mng - schedule remote invocations of mng commands"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mng",
    "imbue-common",
    "mng-modal",
    "click-option-group>=0.5.6",
    "modal>=1.3.1",
    "python-dotenv>=1.0",
    "tabulate>=0.9.0",
]

[project.entry-points.mng]
schedule = "imbue.mng_schedule.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }
imbue-common = { workspace = true }
mng-modal = { workspace = true }

# Shared pytest settings (markers, filterwarnings, coverage report config)
# are centralized in:
#   libs/imbue_common/imbue/imbue_common/conftest_hooks.py
# The settings below remain here because they are read from pyproject.toml
# before any hooks run: addopts, coverage.run, inline-snapshot, timeout_func_only.
[tool.pytest.ini_options]
timeout_func_only = true
junit_family = "xunit1"
testpaths = ["."]
addopts = [
  "-n 4",
  "--dist=worksteal",
  "--cov=imbue.mng_schedule",
  "--cov-report=term-missing",
  "--cov-report=html",
  "--cov-report=xml",
  "--cov-fail-under=77",
  "--durations=20",
  "--timeout=10",
  "--timeout-method=signal",
  "--max-worker-restart=0",
  "-m not acceptance and not release",
  "--slow-tests-to-file",
  "--coverage-to-file",
]

[tool.coverage.run]
parallel = true
concurrency = ["multiprocessing", "thread"]
omit = [
  "*_test.py",
  "test_*.py",
  "*/tests/*",
  "*/conftest.py",
  "*/utils/testing.py",
  # Modal cron runner and verification run on Modal and require infrastructure to test
  "*/implementations/modal/cron_runner.py",
  "*/implementations/modal/verification.py",
]

[tool.inline-snapshot]
default-flags=["report"]
default-flags-tui=["report"]
default-flags-ide=["report"]
format-command="uv run ruff format --force-exclude --config pyproject.toml --stdin-filename {filename}"

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
