[project]
name = "mng-test-coder"
version = "0.1.0"
description = "Test agent type plugin for mng - a changeling agent that uses the matched-responses model for testing without API keys"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.4",
    "mng-claude-changeling==0.1.0",
]

[project.entry-points.mng]
test_coder = "imbue.mng_test_coder.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }
mng-claude-changeling = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
