[project]
name = "mng-ttyd"
version = "0.1.0"
description = "ttyd web terminal plugin for mng - automatically launches a ttyd server alongside agents"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.4",
]

[project.entry-points.mng]
ttyd = "imbue.mng_ttyd.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
