[project]
name = "mng-tutor"
version = "0.1.0"
description = "Interactive tutorial plugin for mng"
requires-python = ">=3.11"
dependencies = [
    "mng==0.1.5",
    "click>=8.0",
    "click-option-group>=0.5.6",
]

[project.entry-points.mng]
tutor = "imbue.mng_tutor.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["imbue"]

[tool.uv.sources]
mng = { workspace = true }

[tool.pyright]
venvPath = "../.."
venv = ".venv"
pythonVersion = "3.11"
strict = ["**/*.py"]
